<resources>
    <string name="app_name">Student HandBook</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_poi_map">Map</string>
    <string name="title_header_home">Home</string>
    <string name="title_header_schedule">Schedule</string>
    <string name="title_header_account">Account</string>
    <string name="title_header_anomalies">Anomalies</string>
    <string name="title_header_pois">Points of interest</string>
    <string name="points_of_interest_menu">Points of interest</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_account">Account</string>
    <string name="menu_item_teachers_info">Teachers Info</string>
    <string name="menu_item_lost_and_found">Lost and Found</string>
    <string name="menu_item_anomalies">Anomalies</string>
    <string name="menu_item_facilities">Facilities</string>
    <string name="menu_item_points_of_interest">Points of Interest</string>
    <string name="report_anomaly_title_fragment">Report Anomaly</string>
    <string name="report_anomaly_description_subtitle_fragment">Insert Description</string>
    <string name="report_anomaly_room_hint_fragment">Room</string>
    <string name="report_anomaly_image_subtitle_fragment">Capture Image</string>
    <string name="report_lost_and_founds_image">Capture Image</string>
    <string name="report_anomaly_image_button_fragment">Capture Anomaly Image</string>
    <string name="report_anomaly_description_hint_fragment">Description</string>
    <string name="lost_and_found">Lost And Founds</string>
    <string name="tab_text_1">Lost</string>
    <string name="tab_text_2">Founds</string>
    <string name="report_anomaly_room_subtitle_fragment">Insert Room</string>
    <string name="report_location_lost_and_found">Insert Location</string>
    <string name="report_subject_lost_and_found">Insert Object</string>
    <string name="report_observation_lost_and_found">Insert Observation</string>
    <string name="pois_details">Details</string>
    <string name="pois_directions">Directions</string>
    <string name="account_user_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_current_password">Password</string>
    <string name="account_new_password">New Password</string>
    <string name="account_confirm_new_password">Confirm New Password</string>
    <string name="account_confirm_reset_password_button">Confirm</string>
    <string name="account_log_out_button">Log Out</string>
    <string name="report_anomaly_report_button">Report</string>
    <string name="choose_lost_or_found">Lost or found?</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">Log in</string>
    <string name="login_to_register_text">Don´t have account? </string>
    <string name="login_sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_first_name_hint">First Name</string>
    <string name="sign_up_last_name_hint">Last Name</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_confirm_password_hint">Confirm Password</string>
    <string name="sign_up_register_button">Sign Up</string>
    <string name="call">Call</string>
    <string name="menu_item_nfc">Register a presence</string>
    <string name="title_header_nfc">NFC</string>
    <string name="account_course">Course</string>
    <string name="account_courseClass">Class</string>
    <string name="nfc_result_success">Registered in class: </string>
    <string name="nfc_result_fail1">You don\'t have class in the classroom </string>
    <string name="nfc_result_fail2"> at this moment</string>
    <string name="title_header_lost_and_founds">Lost and Founds</string>
</resources>
