<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewAnomalies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ffff"
        android:fillViewport="true"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/report_anomaly_title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/report_anomaly_title_fragment"
                android:textColor="#969696"
                android:textSize="30sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/report_anomaly_image_subtitle_fragment"
                android:textColor="#969696"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/image_capture"
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:background="@drawable/default_image"
                android:src="@drawable/border_image_view" />

            <Button
                android:id="@+id/captureImageButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_button_capture_image"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/report_anomaly_image_button_fragment"
                android:textColor="#fff"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/report_anomaly_room_subtitle_fragment"
                android:textColor="#969696"
                android:textSize="25sp"
                />

            <!--Room Text-->
            <EditText
                android:id="@+id/anomalyRoomText"
                android:background="@drawable/background_forms"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:hint="@string/report_anomaly_room_hint_fragment"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#5e6a71"
                android:textColorHint="#737c81"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/report_anomaly_description_subtitle_fragment"
                android:textColor="#969696"
                android:textSize="25sp"
                />
            <!--Description Text-->
            <EditText
                android:id="@+id/anomalyDescriptionText"
                android:background="@drawable/background_forms"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:drawablePadding="12dp"
                android:textColor="#5e6a71"
                android:padding="8dp"
                android:hint="@string/report_anomaly_description_hint_fragment"
                android:textColorHint="#737c81"
                android:maxLines="2" />

            <Button
                android:id="@+id/anomalyButtonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/background_button_report_anomalies"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/report_anomaly_report_button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>