<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewAnomalies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ffff"
        android:fillViewport="true"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/report_anomaly_title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/report_anomaly_title_fragment"
                android:textColor="#969696"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/choose_lost_or_found"
                android:textColor="#969696"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:textColor="#969696"
                android:textSize="25sp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioFound"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#969696"
                    android:text="@string/found"
                    android:checked="true"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioLost"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#969696"
                    android:text="@string/lost"
                    android:textSize="18sp" />

            </RadioGroup>


            <!--Image Text-->
            <TextView
                android:id="@+id/image_capture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/report_lost_and_founds_image"
                android:textColor="#969696"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/image_capture"
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:background="@drawable/default_image"
                android:src="@drawable/border_image_view" />

            <Button
                android:id="@+id/captureImageButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/background_button_capture_image"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/report_lost_and_founds_image"
                android:textColor="#fff"
                android:textSize="12sp" />

            <!--Subject Text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/report_subject_lost_and_found"
                android:textColor="#969696"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/lostAndFoundSubjectText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/background_forms"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/report_subject_lost_and_found"
                android:inputType="text"
                android:maxLines="2"
                android:padding="8dp"
                android:textColor="#5e6a71"
                android:textColorHint="#737c81" />

            <!--Location Text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/report_location_lost_and_found"
                android:textColor="#969696"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/lostAndFoundLocationText"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_forms"
                android:hint="@string/report_location_lost_and_found"
                android:padding="8dp"
                android:textColor="#5e6a71"
                android:textColorHint="#737c81"
                android:textSize="20sp" />

            <!--Description Text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/report_anomaly_description_subtitle_fragment"
                android:textColor="#969696"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/lostAndFoundDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/background_forms"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/report_anomaly_description_hint_fragment"
                android:inputType="text"
                android:maxLines="2"
                android:padding="8dp"
                android:textColor="#5e6a71"
                android:textColorHint="#737c81" />

            <!--Observation Text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/report_observation_lost_and_found"
                android:textColor="#969696"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/lost_and_foundsObservationText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/background_forms"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/report_anomaly_description_hint_fragment"
                android:inputType="text"
                android:maxLines="2"
                android:padding="8dp"
                android:textColor="#5e6a71"
                android:textColorHint="#737c81" />


            <Button
                android:id="@+id/lostAndFoundsButtonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/background_button_report_anomalies"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/report_anomaly_report_button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>