<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff">
         <!--Interior layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--Image Logo-->
            <ImageView
                android:layout_width="390dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/isep_logo" />

            <!--Email Edit Text-->
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:textColor="#5e6a71"
                android:padding="8dp"
                android:hint="@string/login_email_hint"
                android:layout_marginTop="40dp"
                android:textColorHint="#737c81"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person_white_24dp" />

            <!--Line below Edit Text-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#737c81" />

            <!--Password Edit Text-->
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/login_password_hint"
                android:textColorHint="#737c81"
                android:textColor="#5e6a71"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/ic_lock_white_24dp"/>

            <!--Line below Edit Text-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#737c81" />

            <!--Login Button-->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/login_login_button"
                android:textColor="#ffff"
                android:textAllCaps="false"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="35dp"
                android:textSize="18sp"/>

            <!--Sign Up -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_to_register_text"
                    android:textColor="#5e6a71"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/login_sign_up" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>